# trajectry_publisher_ros2

./: CMakeLists.txt  package.xml
src/: trajectry_publisher.cpp  trajectry_publisher_component.cpp
